# data-investigation-platform

./: README.md  pyproject.toml
dags/: investigation_dag.py
frontend/: package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js
src/app/: __init__.py  cli.py  main.py
src/app/api/: investigations.py
src/app/models/: __init__.py  investigation.py
src/app/services/: __init__.py  auth.py  encryption.py  flink.py  permissions.py  spark.py  store.py  watermark.py
tests/: test_cli.py  test_health.py  test_models.py  test_security.py  test_spark_flink.py  test_store.py
