[tool.poetry]
name = "data-investigation-platform"
version = "0.1.0"
description = "Data Investigation Platform"
authors = ["AutoBot <bot@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
pydantic = "^1.10"
typer = "^0.9.0"
apache-airflow = "^2.9.0"
pyspark = "^3.5.0"
pyflink = "^1.17.0"
cryptography = "^42.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
